Justert oppsett for ankerlenker i H2 og H3

--- a/src/pages/produkt/sykepenger/sykepenger.njk
+++ b/src/pages/produkt/sykepenger/sykepenger.njk
@@ -52,8 +52,8 @@ permalink: 'produkt/sykepenger/index.html'
           <div class="w-10 h-[0.675ch] bg-[#E6C7D8] mb-5 mt-5"></div>
           <div class="relative">
             <h2 class="font-bold text-3xl/tight text-balance text-brand-purple-deep">
-              <a href="#{{ chapter.data.title | slugify }}" class="">
-                {{ chapter.data.title }}
+              <a href="#{{ chapter.data.title | slugify }}">
+                <span>{{ chapter.data.title }}</span>
               </a>
             </h2>
           </div>
