--- a/src/pages/forside/forside.njk
+++ b/src/pages/forside/forside.njk
@@ -1,6 +1,7 @@
 ---
+category: 'For privatpersoner'
 type: 'Forside'
-title: 'Privatperson'
+title: 'Forside'
 description: 'Lenker til de viktigste områdene + utvalgte snarveier.'
 tags: ['proto']
 order: 1
