--- a/src/pages/forside/forside.njk
+++ b/src/pages/forside/forside.njk
@@ -11,13 +11,13 @@ alpine: true
 
 {%- block content -%}
   <main class="" x-bind:inert="menuOpen || myPageOpen">
-    <div class="grid py-12 grid-cols-combi">
+    <div class="grid pt-8 pb-12 grid-cols-combi bg-brand-beige">
       <div class="col-container">
-        <h2 class="text-xl font-semibold">Hva kan vi hjelpe deg med?</h2>
+        <h2 class="text-2xl font-extrabold text-brand-purple-deep">Hva kan vi hjelpe deg med?</h2>
         <ul class="grid gap-1.5 mt-4 lg:text-xl sm:gap-4 sm:grid-cols-2 xl:grid-cols-3">
           {%- for area in areaList -%}
-            <li class="relative grid items-center break-inside-avoid pl-5 sm:pl-8 pr-28 sm:pr-36 py-3 rounded-lg min-h-16 sm:min-h-24 xl:min-h-32 transition-shadow shadow-none text-blue-600 bg-blue-50 has-[a:hover]:bg-blue-50 has-[a:focus-visible]:ring has-[a:focus-visible]:ring-blue-600 has-[a:hover]:shadow-lg">
-              <a class="font-semibold leading-tight focus-visible:outline-none after:absolute after:inset-0 text-balance hover:underline hover:decoration-2" href="#">
+            <li class="relative grid items-center break-inside-avoid pl-5 sm:pl-8 pr-28 sm:pr-36 py-3 rounded-lg min-h-16 sm:min-h-24 xl:min-h-32 transition shadow text-blue-600 bg-white has-[a:hover]:bg-blue-50 has-[a:focus-visible]:ring has-[a:focus-visible]:ring-blue-600 has-[a:hover]:shadow-none">
+              <a class="leading-tight focus-visible:outline-none after:absolute after:inset-0 text-balance hover:underline hover:decoration-2" href="{{ area.href or '#'}}">
                 <span>{{ area.title | safe }}</span>
               </a>
               {{ area.icon | svgContents("z-10 right-4 pt-4 sm:pt-8 max-h-full h-auto w-auto self-stretch absolute bottom-0 pointer-events-none") | safe if area.icon }}
@@ -27,13 +27,13 @@ alpine: true
       </div>
     </div>
 
-    <div class="grid pt-4 pb-8 grid-cols-combi">
+    <div class="grid py-6 mt-4 grid-cols-combi">
       <div class="col-container">
-        <h2 class="text-xl font-semibold">Snarveier</h2>
-        <ul class="text-lg sm:gap-8 sm:columns-2">
+        <h2 class="text-2xl font-extrabold text-brand-purple-deep">Snarveier</h2>
+        <ul class="mt-3 text-lg sm:gap-8 sm:columns-2">
           {%- for shortcut in shortcutsList -%}
             <li class="block border-t border-slate-200">
-              <a class="relative flex items-center justify-start gap-2 px-1 py-3 text-blue-600 hover:underline focus-visible:z-10 hover:z-10 hover:bg-blue-50 hover:rounded-lg focus-visible:rounded-lg hover:ring-4 hover:ring-white focus-visible:outline-none focus-visible:ring hover:ring-offset-2 hover:ring-offset-blue-50 focus-visible:ring-blue-600 hover:decoration-2" href="#">
+              <a class="relative flex items-center justify-start gap-2 px-2 py-3 text-blue-600 hover:underline focus-visible:z-10 hover:z-10 hover:bg-blue-50 hover:rounded-lg focus-visible:rounded-lg hover:ring-4 hover:ring-white focus-visible:outline-none focus-visible:ring hover:ring-offset-2 hover:ring-offset-blue-50 focus-visible:ring-blue-600 hover:decoration-2" href="#">
                 {{ '/src/_includes/svg/icons/arrow-right.svg' | svgContents("w-6 h-6") | safe if shortcut.icon }}
                 <span>{{ shortcut.title | safe }}</span>
               </a>
@@ -44,10 +44,10 @@ alpine: true
       </div>
     </div>
 
-    <div class="grid pt-6 pb-8 grid-cols-combi">
+    <div class="grid pt-4 pb-16 grid-cols-combi">
       <div class="col-container">
-        <h2 class="text-xl font-semibold">Aktuelt</h2>
-        <div class="grid gap-3 sm:grid-cols-2 sm:gap-8">
+        <h2 class="text-2xl font-extrabold text-brand-purple-deep">Aktuelt</h2>
+        <div class="grid gap-3 mt-3 sm:grid-cols-2 sm:gap-8">
           {%- for news in newsList -%}
           <article class="relative grid pl-5 pr-16 py-5 rounded-lg bg-white ring-1 ring-slate-300 has-[a:hover]:bg-blue-50 has-[a:focus-visible]:ring has-[a:focus-visible]:ring-blue-600 content-between">
             <h3 class="mb-auto text-lg leading-snug">
@@ -61,22 +61,22 @@ alpine: true
       </div>
     </div>
 
-    <div class="grid pt-8 pb-24 grid-cols-combi">
+    <div class="grid pt-12 pb-20 grid-cols-combi bg-slate-100 wave">
       <div class="col-container">
-        <h2 class="text-xl font-semibold">Kontakt oss</h2>
+        <h2 class="text-2xl font-extrabold text-brand-purple-deep">Kontakt oss</h2>
         <div class="grid gap-8 mt-4 sm:grid-cols-2">
-          <div class="relative px-5 py-3.5 rounded-bl-none focus-within:rounded-bl-lg rounded-lg bg-blue-50 has-[a:focus-visible]:ring has-[a:focus-visible]:ring-blue-600 group">
+          <div class="relative px-5 py-3.5 rounded-bl-none focus-within:rounded-bl-lg rounded-lg bg-white has-[a:focus-visible]:ring has-[a:focus-visible]:ring-blue-600 group has-[a:hover]:drop-shadow">
             <h3 class="text-lg ">
               <a class="text-blue-600 underline hover:decoration-2 after:inset-0 after:absolute after:z-10 focus-visible:outline-none" href="#">Du kan chatte med oss</a>
             </h3>
             <p class="mt-1 text-balance">Du møter først chatbot Frida. Du kan be Frida om å få chatte med en veileder (hverdager 09.00–15.00)</p>
             <svg class="absolute left-0 top-full group-focus-within:hidden" viewBox="0 0 24 24" width="24" height="24" aria-hidden="true" focusable="false" >
-              <polygon fill="rgb(230 240 255)" points="0 0, 24 0, 0 24" />
+              <polygon fill="#fff" points="0 0, 24 0, 0 24" />
             </svg>
           </div>
-          <div class="relative px-5 py-4 bg-white rounded-lg has-[a:focus-visible]:ring has-[a:focus-visible]:ring-blue-600">
+          <div class="relative px-5 py-4 rounded-lg has-[a:focus-visible]:ring has-[a:focus-visible]:ring-blue-600">
             <h3 class="text-lg">
-              <a class="text-blue-600 underline hover:decoration-2 focus-visible:outline-none" href="#">Du kan også ringe eller skrive til oss</a>
+              <a class="text-blue-600 underline hover:decoration-2 focus-visible:outline-none" href="/skriv-til-oss/">Du kan også ringe eller skrive til oss</a>
             </h3>
             <p class="mt-1 leading-snug text-balance">Se hvordan du kan kontakte oss på ulike måter.</p>
           </div>
@@ -86,5 +86,3 @@ alpine: true
 
   </main>
 {%- endblock -%}
-
-{%- block styles -%}{%- endblock -%}
